--- a/Arc_Ai/Arc_Ai/core/templates/core/login.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/login.html
@@ -4,53 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saved</title>
+    <title>Login</title>
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
 </head>
 <body>
-    <div id="sidebar">
-        <div id="sidebar_icns_grp">
-            <img class="sidebar_icns" src="{% static 'Images/Navigation.png' %}" alt="Navigate">
-            <img class="sidebar_icns" src="{% static 'Images/Notification.png' %}" alt="Notification">
-            <img class="sidebar_icns" src="{% static 'Images/Settings.png' %}" alt="Settings">
-        </div>
-    </div>
-    <div id="header">
-        <div>
-            <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
-        </div>
-        <div id="header_nav" class="text_white">
-            <p><a href="{% url 'home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
-            <p><a href="{% url 'organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
-            <p><a href="{% url 'saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
-            <p><a href="{% url 'email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-        </div>
-        <div>
-            <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
-        </div>
-    </div>
-    <div id="content">
-        <h1 class="titles">Folders</h1>
-        <div id="folder_items">
-        {% for folder in folders %}
-            <p class="folders">{{ folder }}</p>
-        {% endfor %}
-        </div>
-        
-        <h1 class="titles">Files</h1>
-        <div id="file_items">
-        {% for file in files %}
-            <p class="file">{{ file }}</p>
-            <hr class="long-line">
-        {% endfor %}
-        </div>
-
-        <h1 class="titles">Trash</h1>
-        <div id="file_items">
-        {% for trash_file in trash %}
-            <p class="file">{{ trash_file }}</p>
-            <hr class="long-line">
-        {% endfor %}
+    <div id="login_cntr">
+        <div id="container">
+            <div id="form_container">
+                <h1 class="titles">Sign In</h1>
+                <form id="form" method="post" action="{% url 'core:login' %}">
+                    {% csrf_token %}
+                    <div id="signin_form">
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" id="password" name="password" required>
+                        </div>
+                    </div>
+                    <div id="footer">
+                        <button id="login_button" type="submit">Login</button>
+                        <p>Continue With</p>
+                    </div>
+                    <div id="social_media">
+                        <button class="continue_with_button" type="button" onclick="window.location.href='/register/'">
+                            <img class="button_images" src="{% static 'images/Google.png' %}" alt="Google">
+                            <span>Sign in with Google</span>
+                        </button>
+                        <button class="continue_with_button margin-top" type="button" onclick="window.location.href='/forgot-password/'">
+                            <img class="button_images" src="{% static 'images/Facebook.png' %}" alt="Facebook">
+                            <span>Sign in with Facebook</span>
+                        </button>
+                    </div>
+                </form>
+                <a class="titles margin-top-50" href="{% url 'core:signup' %}">Sign Up?</a></p>
+            </div>
+            <div id="logo_container" class="gap">
+                <div id="main_logo">
+                    <img id="welcome_logo" src="{% static 'Images/welcome_logo.png' %}" alt="Arc.Ai Logo">
+                    <h1>ARC.AI</h1>
+                    <h2>Hierarchy-Based Online Repository</h2>
+                </div>
+                <h1>Welcome Back!</h1>
+            </div>
         </div>
     </div>
 </body>
