--- a/Arc_Ai/Arc_Ai/core/templates/core/saved.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/saved.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saved</title>
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/styles.css' %}?v=1.0">
+    <link rel="stylesheet" href="{% static 'styles/saved.css' %}?v=1.0">
 </head>
 <body>
     <div id="sidebar">
@@ -20,24 +21,24 @@
             <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
         </div>
         <div id="header_nav" class="text_white">
-            <p><a href="{% url 'home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
-            <p><a href="{% url 'organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
-            <p><a href="{% url 'saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
-            <p><a href="{% url 'email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
+              <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
+            <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
+            <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
+            <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
         </div>
         <div>
             <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
         </div>
     </div>
     <div id="content">
-        <h1 class="titles">Folders</h1>
+        <h1>Folders</h1>
         <div id="folder_items">
         {% for folder in folders %}
             <p class="folders">{{ folder }}</p>
         {% endfor %}
         </div>
         
-        <h1 class="titles">Files</h1>
+        <h2>Files</h2>
         <div id="file_items">
         {% for file in files %}
             <p class="file">{{ file }}</p>
@@ -45,7 +46,7 @@
         {% endfor %}
         </div>
 
-        <h1 class="titles">Trash</h1>
+        <h3>Trash</h3>
         <div id="file_items">
         {% for trash_file in trash %}
             <p class="file">{{ trash_file }}</p>
