--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -21,7 +21,6 @@
             <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
         </div>
         <div id="header_nav" class="text_white">
-            <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
             <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
             <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
             <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
@@ -43,7 +42,7 @@
                     </div>
                     <div class="project-status-container">  
                         <div class="project-logo">
-                            <img src="{% static 'Images/projlogo.png' %}" alt="Project Logo">
+                            <img src="{% static 'Images/Logo.png' %}" alt="Project Logo">
                         </div>
                         <div class="FileInfo">
                             <p><strong>New Employee Onboarding System Design</strong></p>
