--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="project-status-container">  
                         <div class="project-logo">
-                            <img src="{% static 'Images/Logo.png' %}" alt="Project Logo">
+                            <img src="{% static 'Images/projlogo.png' %}" alt="Project Logo">
                         </div>
                         <div class="FileInfo">
                             <p><strong>New Employee Onboarding System Design</strong></p>
