--- a/Arc_Ai/Arc_Ai/core/templates/core/signup.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/signup.html
@@ -21,12 +21,21 @@
             </div>
             <div id="form_container">
                 <h1 class="titles">Sign Up</h1>
+
+                {% for message in messages %}
+                <h5 style="color: red;">{{message}}</h5>
+                {% endfor %}
+
                 <form id="form" method="post" action="{% url 'core:signup' %}">
                     {% csrf_token %}
                     <div id="signin_form">
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="username">Username:</label>
+                            <input type="username" id="username" name="username" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Password:</label>
@@ -43,11 +52,11 @@
                     </div>
                     <div id="social_media">
                         <button class="continue_with_button" type="button" onclick="window.location.href='/register/'">
-                            <img class="button_images" src="{% static 'images/Google.png' %}" alt="Google">
+                            <img class="button_images" src="{% static 'Images/Google.png' %}" alt="Google">
                             <span>Sign up with Google</span>
                         </button>
                         <button class="continue_with_button margin-top" type="button" onclick="window.location.href='/forgot-password/'">
-                            <img class="button_images" src="{% static 'images/Facebook.png' %}" alt="Facebook">
+                            <img class="button_images" src="{% static 'Images/Facebook.png' %}" alt="Facebook">
                             <span>Sign up with Facebook</span>
                         </button>
                     </div>
